# lazyskills

./: .gitignore  Cargo.toml  OSS_PROMOTION_CHANNELS.md  README.md  justfile  skills-lock.json
.agents/: skills-tui-config.json
.github/workflows/: docs-pages.yml  publish-homebrew-scoop.yml  publish-wrappers.yml
.nexus/context/skills-tui/: index.md
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
demos/: lazyskills-demo-ayu-mirage.tape  lazyskills-demo-dracula.tape  lazyskills-demo-nord.tape  lazyskills-demo-onedark.tape
docs/: biome.json  next.config.mjs  package.json
docs/content/docs/: hello-world.mdx  index.mdx  meta.json  overview.mdx  skills-cli.mdx
docs/src/app/: global.css  layout.tsx
docs/src/components/: footer.tsx  hero-template.tsx  home-logo-marquee.tsx  home-navbar.tsx  install-command-block.tsx  logo.tsx  navbar.tsx  open-skills-logo.tsx
docs/src/lib/: layout.shared.tsx
justfiles/development/: demo-vhs.just  dev.just  docs.just
justfiles/utilities/: docs-gh-pub.just  docs-sync.just  pub-bump.just  pub.just
justfiles/verification/: check.just  docs-sync-check.just
packaging/homebrew/: lazyskills.rb.tmpl
packaging/scoop/: lazyskills.json.tmpl
scripts/demo/: setup-vhs-demo-dir.sh
src/: lib.rs  main.rs
src/adapters/: mod.rs  skills_repo.rs  skills_sh.rs
src/app/: mod.rs  skills_tree.rs  skills_tui_app.rs
src/config/: app_config.rs  default_paths.rs  mod.rs  user_config.rs
src/features/: mod.rs
src/features/config/: logic.rs  state.rs
src/features/delete_confirm/: logic.rs  state.rs
src/features/detail/: logic.rs  mod.rs  render.rs  state.rs
src/features/favorites/: logic.rs  state.rs
src/features/preview/: logic.rs  state.rs
src/features/search/: logic.rs  mod.rs  render.rs  state.rs
src/features/startup_dialog/: logic.rs  state.rs
src/features/tree_nav/: logic.rs  state.rs
src/services/: mod.rs  skills_cache.rs  skills_command.rs
tests/: skills_cli_install_remove_e2e.rs  ssi_001_capture_skills_sh_data_contract_suite.rs
tests/ssi_001_capture_skills_sh_data_contract/: mod.rs  test_detail_contract_matches_live_rsc_payload.rs  test_detail_fallback_uses_html_when_rsc_unavailable.rs  test_end_to_end_catalog_and_detail_ingestion.rs  test_list_contract_matches_live_payload.rs  test_search_contract_matches_live_payload.rs
wrappers/python/lazyskills/: README.md  pyproject.toml
wrappers/python/lazyskills/src/lazyskills/: __init__.py
(+222 files in other folders)
