[project]
name = "lazyskills"
version = "0.1.1"
description = "Python launcher for the lazyskills CLI"
readme = "README.md"
authors = [
    { name = "Alpha" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
lazyskills = "lazyskills:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
